data/derived/comb/progs/unify/prog8904.ml.out
Characters 56-76:
  else bigAdd l (mulByDigit (i-1) l);;
                ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
